图片验证码增加定制参数限制
